# web-library-api

./: .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt
backend/: __init__.py  main.py
backend/alembic/: env.py
backend/alembic/versions/: 80ace462a034_change_book_shelf_enum_to_string.py
backend/env/: .env
backend/src/: config.py  database.py
backend/src/books/: schemas.py
backend/src/users/: endpoints.py  services.py
backend/src/users_books/: models.py  schemas.py
backend/tests/: conftest.py
backend/tests/test_web/: conftest.py  test_users_books.py
frontend/: main.py
frontend/components/books/: book_info.py  filter_menu.py
frontend/pages/: books.py
frontend/static/: classes.py
grafana/: API_Observability.json
